styles.css
body {
    scrollbar-width: none;
    background-color: black;
    background-attachment: fixed;
    background-position: center;

    background-size: cover;
    background-image: url("https://naga.ac/patternpad.svg");
    color: white;
}

html{
    scrollbar-width: none;
}
#logo{
    max-width: 700px;
    max-height: 700px;
    /* margin: 60px; */
}

  /* - - - - - - - - - - - - - - - -  HEADING - - - - - - - - - - - - - - - - */
#headingg {
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
  
    display: flex;
    flex-direction: column; /* Stacks flex items vertically */
    align-items: center;
    max-width: 800px;
    margin-left: auto; /* Centers the container horizontally */
    margin-right: auto; /* Centers the container horizontally */
}

  
#bot_name {
    background: linear-gradient(-45deg,#757575, #ffffff);
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    color: transparent; /* Fallback for non-webkit browsers */
    text-align: center;
    font-size: 60px;
    letter-spacing: -0.100em;
}
  


/* #bio{
    max-width: 800px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
} */
#bot_bio{
    font-size: 19px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    padding: 20px;

    /* box-shadow: 0px 0px 30px 0px rgba(56, 56, 56, 0.6);
    border-left: 2px solid #ff0000;
    border-right: 2px solid #ff0000; */
    text-align: center;
}
  


  /* - - - - - - - - - - - - - - - -  INVITE BOT - - - - - - - - - - - - - - - - */
#invite-bot {
    background: linear-gradient(-45deg,#000000, #170000);
    border: none; /* Remove default border */
    border-radius: 6px;
    height: 60px;
    width: 180px;
    font-weight: 600;
    color: white; /* Text color */
    font-size: 16px;
    cursor: pointer; /* Change mouse cursor to indicate button */
    outline: none;
    box-shadow: 0px 0px 10px 0px rgba(192, 165, 255, 0.6);
    transition: box-shadow 0.2s ease, transform 0.3s ease;
    margin: 20px;
}
  
  /* Hover effect to slightly change the gradient */
#invite-bot:hover {
    box-shadow: 0px 0px 9px 1px rgba(255, 255, 255, 0.6);
}
  
  
  
  
  
  
  
.container {
    position: relative;
    display: grid;
    grid-template-rows: repeat(13, 5vh);
    /* grid-template-columns: repeat(20, 5vw); */
    transform-style: preserve-3d;
}
  
.monitor {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    transform-style: preserve-3d;
}
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  .camera {
    position: absolute;
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transition: 500ms;
  }
  .camera.o-y {
    transform: rotateY(-30deg);
  }

.camera.o-x{
    transform: rotateX(6deg);
}

  .vr {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 300px;
    height: 300px;
    transform: translate(-50%, -50%);
    transform-style: preserve-3d;
  }
  .vr_layer {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    border: 1px solid rgba(255, 255, 255, 0.2);
    background: rgba(0, 153, 255, 0.006);
    border-radius: 10px;
    transform: preserve-3d;
  }
  .vr_layer:nth-child(1) {
    transform: translateZ(-157.5px);
  }
  .vr_layer:nth-child(1) .vr_layer_item {
    -webkit-animation-delay: -210ms;
            animation-delay: -210ms;
  }
  .vr_layer:nth-child(2) {
    transform: translateZ(-140px);
  }
  .vr_layer:nth-child(2) .vr_layer_item {
    -webkit-animation-delay: -420ms;
            animation-delay: -420ms;
  }
  .vr_layer:nth-child(3) {
    transform: translateZ(-122.5px);
  }
  .vr_layer:nth-child(3) .vr_layer_item {
    -webkit-animation-delay: -630ms;
            animation-delay: -630ms;
  }
  .vr_layer:nth-child(4) {
    transform: translateZ(-105px);
  }
  .vr_layer:nth-child(4) .vr_layer_item {
    -webkit-animation-delay: -840ms;
            animation-delay: -840ms;
  }
  .vr_layer:nth-child(5) {
    transform: translateZ(-87.5px);
  }
  .vr_layer:nth-child(5) .vr_layer_item {
    -webkit-animation-delay: -1050ms;
            animation-delay: -1050ms;
  }
  .vr_layer:nth-child(6) {
    transform: translateZ(-70px);
  }
  .vr_layer:nth-child(6) .vr_layer_item {
    -webkit-animation-delay: -1260ms;
            animation-delay: -1260ms;
  }
  .vr_layer:nth-child(7) {
    transform: translateZ(-52.5px);
  }
  .vr_layer:nth-child(7) .vr_layer_item {
    -webkit-animation-delay: -1470ms;
            animation-delay: -1470ms;
  }
  .vr_layer:nth-child(8) {
    transform: translateZ(-35px);
  }
  .vr_layer:nth-child(8) .vr_layer_item {
    -webkit-animation-delay: -1680ms;
            animation-delay: -1680ms;
  }
  .vr_layer:nth-child(9) {
    transform: translateZ(-17.5px);
  }
  .vr_layer:nth-child(9) .vr_layer_item {
    -webkit-animation-delay: -1890ms;
            animation-delay: -1890ms;
  }
  .vr_layer:nth-child(10) {
    transform: translateZ(0px);
  }
  .vr_layer:nth-child(10) .vr_layer_item {
    -webkit-animation-delay: -2100ms;
            animation-delay: -2100ms;
  }
  .vr_layer:nth-child(11) {
    transform: translateZ(17.5px);
  }
  .vr_layer:nth-child(11) .vr_layer_item {
    -webkit-animation-delay: -2310ms;
            animation-delay: -2310ms;
  }
  .vr_layer:nth-child(12) {
    transform: translateZ(35px);
  }
  .vr_layer:nth-child(12) .vr_layer_item {
    -webkit-animation-delay: -2520ms;
            animation-delay: -2520ms;
  }
  .vr_layer:nth-child(13) {
    transform: translateZ(52.5px);
  }
  .vr_layer:nth-child(13) .vr_layer_item {
    -webkit-animation-delay: -2730ms;
            animation-delay: -2730ms;
  }
/* ... */

